# libxml2

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  HTMLparser.c  HTMLtree.c  METADATA  Makefile.am  NEWS  README  README.md  README.zOS  SAX2.c  buf.c  c14n.c  catalog.c  chvalid.c  config.h  configure.ac  debugXML.c  dict.c  encoding.c  entities.c  git_push_all.sh  globals.c  libxml.h  lintmain.c  meson.build  nanoftp.c  nanohttp.c  parser.c  parserInternals.c  pattern.c  relaxng.c  rjdMake  rngparser.c  runsuite.c  runtest.c  runxmlconf.c  schematron.c  (+45 more)
build-VS2010/: libxml2.sln
build-VS2010/libxml2/: libxml2.vcxproj  libxml2.vcxproj.filters
build-VS2010/libxml2-static/: libxml2-static.vcxproj
build-VS2010/libxml2-static-for-dll/: libxml2-static-for-dll.vcxproj  libxml2-static-for-dll.vcxproj.filters
build-VS2010/tests/testOOM/: testOOM.vcxproj
build-VS2010/tests/xmllint/: xmllint.vcxproj
build-VS2010/tests/xmllint-static/: xmllint-static.vcxproj
build-VS2013/: libxml2.sln
build-VS2013/libxml2/: libxml2.vcxproj  libxml2.vcxproj.filters
build-VS2013/libxml2-static/: libxml2-static.vcxproj
build-VS2013/libxml2-static-for-dll/: libxml2-static-for-dll.vcxproj
build-VS2013/tests/testOOM/: testOOM.vcxproj  testOOM.vcxproj.filters
build-VS2013/tests/xmllint/: xmllint.vcxproj
build-VS2013/tests/xmllint-static/: xmllint-static.vcxproj
build-VS2015/: libxml2.sln
build-VS2015/libxml2/: libxml2.vcxproj
build-VS2015/libxml2-static/: libxml2-static.vcxproj
build-VS2015/libxml2-static-for-dll/: libxml2-static-for-dll.vcxproj  libxml2-static-for-dll.vcxproj.filters
build-VS2015/tests/testOOM/: testOOM.vcxproj
build-VS2015/tests/xmllint/: xmllint.vcxproj
build-VS2015/tests/xmllint-static/: xmllint-static.vcxproj
build-VS2017/: libxml2.sln
build-VS2017/libxml2/: libxml2.vcxproj
build-VS2017/libxml2-static/: libxml2-static.vcxproj
build-VS2017/libxml2-static-for-dll/: libxml2-static-for-dll.vcxproj
build-VS2017/tests/testOOM/: testOOM.vcxproj
build-VS2017/tests/xmllint/: xmllint.vcxproj
build-VS2017/tests/xmllint-static/: xmllint-static.vcxproj
build-VS2019/: libxml2.sln
build-VS2019/libxml2/: libxml2.vcxproj  libxml2.vcxproj.filters
build-VS2019/libxml2-static/: libxml2-static.vcxproj
build-VS2019/libxml2-static-for-dll/: libxml2-static-for-dll.vcxproj
build-VS2019/tests/testOOM/: testOOM.vcxproj
build-VS2019/tests/testThreads/: testThreads.vcxproj
build-VS2019/tests/xmllint/: xmllint.vcxproj
build-VS2022/: libxml2.sln
build-VS2022/libxml2/: libxml2.vcxproj
build-VS2022/libxml2-static/: libxml2-static.vcxproj
build-VS2022/libxml2-static-for-dll/: libxml2-static-for-dll.vcxproj
cmake/template/: config.h.in
cmake/try_compile/: GETHOSTBYNAME_CONST_CHAR.c  HAVE_VA_COPY.c  HAVE___VA_COPY.c  VA_LIST_IS_NOT_ARRAY.c  XML_SEND_CONST_CHAR.c  XML_SOCKLEN_T_IS_INT.c  XML_SOCKLEN_T_IS_SIZE_T.c  XML_SOCKLEN_T_IS_SOCKLEN_T.c
doc/: APIchunk10.html  APIfiles.html  APIsymbols.html  Makefile.am  libxml2-api.xml  libxml2-refs.xml  news.html  symbols.xml  xmlcatalog.1  xmllint.1
doc/devhelp/: libxml2-parser.html
doc/examples/: io1.c  io2.c  parse1.c  parse2.c  parse3.c  parse4.c  reader1.c  reader2.c  reader3.c  reader4.c  testWriter.c  tree1.c  tree2.c  xpath1.c  xpath2.c
example/: gjobread.c  io1.c  io2.c  parse1.c  parse2.c  parse3.c  parse4.c  reader1.c  reader2.c  reader3.c  reader4.c  testWriter.c  tree1.c  tree2.c  xpath1.c  xpath2.c
include/: debugm.h  win32config.h
include/libxml/: catalog.h  chvalid.h  debugXML.h  entities.h  globals.h  monolithic_examples.h  nanoftp.h  parser.h  parserInternals.h  relaxng.h  tree.h  valid.h  xmlIO.h  xmlexports.h  xmlmemory.h  xmlsave.h  xmlschemas.h  xmlversion.h  xmlversion.h.in  xmlwin32version.h  xmlwin32version.h.in  xmlwriter.h
os400/: initscript.sh  rpgsupport.h
os400/libxmlrpg/: xmlversion.rpgle.in
python/: setup.py  types.c
win32/: Makefile.msvc  README.md  config.h  configure.bat  configure.js  libxml.def  libxml.sln  libxml2.rc  libxml_dll.vcproj  libxml_lib.vcproj  make.bcb.bat  make.msvc.bat  rcVersion.h  runsuite.vcproj  runtest.vcproj  runxmlconf.vcproj  testAutomata.vcproj  testC14N.vcproj  testHTML.vcproj  testModule.vcproj  testOOM.vcproj  testReader.vcproj  testRegexp.vcproj  testRelax.vcproj  testSAX.vcproj  testSchemas.vcproj  testThreads.vcproj  testThreadsW32.vcproj  testURI.vcproj  testXPath.vcproj  testapi.vcproj  testchar.vcproj  testdict.vcproj  testrecurse.vcproj  win32config.h  xml_example.vcproj  xml_testdso.vcproj  xmlcatalog.vcproj  xmllint.vcproj
win32.msvc2008/: libxml.def  libxml.sln  libxml_dll.vcproj  libxml_lib.vcproj  libxml_test.vcproj  runsuite.vcproj  runtest.vcproj  runxmlconf.vcproj  testAutomata.vcproj  testC14N.vcproj  testHTML.vcproj  testModule.vcproj  testOOM.vcproj  testReader.vcproj  testRegexp.vcproj  testRelax.vcproj  testSAX.vcproj  testSchemas.vcproj  testThreads.vcproj  testThreadsW32.vcproj  testURI.vcproj  testXPath.vcproj  testapi.vcproj  testchar.vcproj  testdict.vcproj  testlimits.vcproj  testrecurse.vcproj  xml_example.vcproj  xml_testdso.vcproj  xmlcatalog.vcproj  xmllint.vcproj
win32.msvc2010/: libxml.sln  libxml_dll.vcxproj  libxml_dll.vcxproj.filters  libxml_lib.vcxproj  libxml_lib.vcxproj.filters  runsuite.vcxproj  runsuite.vcxproj.filters  runtest.vcxproj  runtest.vcxproj.filters  runxmlconf.vcxproj  runxmlconf.vcxproj.filters  testAutomata.vcxproj  testAutomata.vcxproj.filters  testC14N.vcxproj  testC14N.vcxproj.filters  testHTML.vcxproj  testHTML.vcxproj.filters  testModule.vcxproj  testModule.vcxproj.filters  testOOM.vcxproj  testOOM.vcxproj.filters  testReader.vcxproj  testReader.vcxproj.filters  testRegexp.vcxproj  testRegexp.vcxproj.filters  testRelax.vcxproj  testRelax.vcxproj.filters  testSAX.vcxproj  testSAX.vcxproj.filters  testSchemas.vcxproj  testSchemas.vcxproj.filters  testThreads.vcxproj  testThreads.vcxproj.filters  testThreadsW32.vcxproj  testThreadsW32.vcxproj.filters  testURI.vcxproj  testURI.vcxproj.filters  testXPath.vcxproj  testXPath.vcxproj.filters  testapi.vcxproj  (+17 more)
(+6 files in other folders)
